# bubble-chat-app

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  GROWTH_STRATEGY.md  LLM_PROMPTS_AUDIT.md  PLAN.md  RizzBot.apk  build-commands.md  docker-compose.prod.yml  docker-compose.yml  features.md  index.html  mcp.json  prompts.md  staging-build-commands.md
.githooks/: pre-commit
backend/: .dockerignore  .env  .env.example  .env.production  .env.staging  .gitignore  Dockerfile  Makefile  after.txt  before.txt  docker-compose.prod.yml  docker-compose.yml  langgraph.json  profile_results.html  pyproject.toml  rizzbot.db
backend/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
backend/agent/: graph.py  graph_v2.py  nodes.py  nodes_v2_legacy.py  state.py
backend/alembic/: env.py
backend/app/: config.py  main.py
backend/docker/: loki-config.yaml  promtail-config.yaml
backend/oci/: config.example
backend/rizzbot_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/scripts/: anvi_payload.json  audio_video_factory.py  d_askout_payload.json  eval_anvi.py  eval_models.py  eval_rag.py  eval_rag_quality.py  eval_scenario.py  eval_scenario_local.py  generator_prompt.txt  khush_payload.json  khushi_askout_payload.json  khushi_chat_payload.json  khushi_payload.json  lukewarm_askout.json  mangal_chat_payload.json  mangal_tmp.json  model_comparison.md  p_approval_payload.json  p_grammar_payload.json  sample_payload.json  seed_and_test_rag.py  test.py
(+532 files in other folders)
